    a function that validates the card's value and returns True or False.
  * The `get_coldefs()` method of table HDUs is deprecated.  Use the `.columns`
    attribute instead.
  * The `ColDefs.data` attribute is deprecated--use `ColDefs.columns` instead
    (though in general you shouldn't mess with it directly--it might become
    internal at some point).
  * Possibly others--please report if you find any changes that cause
    difficulties.

- Calls to deprecated functions will display a Deprecation warning.  However,
  in Python 2.7 and up Deprecation warnings are ignored by default, so run
  Python with the `-Wd` option to see if you're using any deprecated
  functions.  If we get close to actually removing any functions, we might
  make the Deprecation warnings display by default.
- Added basic Python 3 support
- Added support for multi-dimensional columns in tables as specified by the
  TDIMn keywords (#47)
- Fixed a major memory leak that occurred when creating new tables with the
  `new_table()` function (#49)
  be padded with zero-bytes) vs ASCII tables (where strings are padded with
  spaces) (#15)
- Fixed a bug in which the case of Random Access Group parameters names was not
  preserved when writing (#41)
- Added support for binary table fields with zero width (#42)
- Added support for wider integer types in ASCII tables; although this is non-
  standard, some GEIS images require it (#45)
- Fixed a bug that caused the index_of() method of HDULists to crash when the
  HDUList object is created from scratch (#48)
- Fixed the behavior of string padding in binary tables (where strings should
- Fixed a rare issue that caused excessive memory usage when computing
  checksums using a non-standard block size (see r818)
- Add support for forced uint data in image sections (#53)
- Fixed tuple and list-based indexing of FITS_rec objects (#55)
- Fixed an issue where BZERO and BSCALE keywords were appended to headers in
  the wrong location (#56)