@@ -25,6 +25,9 @@ Changelog
   * The `ColDefs.data` attribute is deprecated--use `ColDefs.columns` instead
     (though in general you shouldn't mess with it directly--it might become
     internal at some point).
+  * `FITS_record` objects take `start` and `end` as arguments instead of
+    `startColumn` and `endColumn` (these are rarely created manually, so it's
+    unlikely that this change will affect anyone).
   * Possibly others--please report if you find any changes that cause
     difficulties.
 
@@ -54,3 +57,5 @@ Changelog
 - Fixed tuple and list-based indexing of FITS_rec objects (#55)
 - Fixed an issue where BZERO and BSCALE keywords were appended to headers in
   the wrong location (#56)
+- `FITS_record` objects (table rows) have full slicing support, including
+  stepping, etc. (#59)
